; ModuleID = '/home/carl/AnghaBench/libui/test/extr_page11.c_newt.c'
source_filename = "/home/carl/AnghaBench/libui/test/extr_page11.c_newt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"Test\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32)* @newt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @newt(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %4 = call i32* (...) @uiNewTab()
  store i32* %4, i32** %3, align 8
  %5 = load i32, i32* %2, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @uiTabAppend(i32* %8, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* null)
  br label %10

10:                                               ; preds = %7, %1
  %11 = load i32*, i32** %3, align 8
  ret i32* %11
}

declare dso_local i32* @uiNewTab(...) #1

declare dso_local i32 @uiTabAppend(i32*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
